Use /etc/rtslib-fb-target instead of /etc/target
Related changes in targetcli-fb depend on a more recent rtslib-fb.

Debian's python-rtslib-fb package changes /etc/target to
/etc/rtslib-fb-target. Follow suit for now to make sure that targetcli
is compatible with the startup logic in python-rtslib-fb and will work
out of the box.

--- a/doc/saveconfig.json.5
+++ b/doc/saveconfig.json.5
@@ -3,7 +3,7 @@
 .B saveconfig.json
 \- Saved configuration file for rtslib-fb and LIO kernel target
 .SH DESCRIPTION
-.B /etc/target/saveconfig.json
+.B /etc/rtslib-fb-target/saveconfig.json
 is the default location for storing the configuration of the Linux
 kernel target, also known as LIO. Since the target is in the kernel, tools like
 .B targetctl
@@ -239,7 +239,7 @@ and view the resulting json file.
 .BR targetcli (8),
 .BR targetctl (8)
 .SH FILES
-.B /etc/target/saveconfig.json
+.B /etc/rtslib-fb-target/saveconfig.json
 .SH AUTHOR
 Man page written by Andy Grover <agrover@redhat.com>.
 .SH REPORTING BUGS
