--- a/doc/targetctl.8
+++ b/doc/targetctl.8
@@ -26,7 +26,7 @@ permissions will be set to only allow root access. If
 is not supplied,
 .B targetctl
 will use the default file location,
-.BR /etc/target/saveconfig.json.
+.BR /etc/rtslib-fb-target/saveconfig.json.
 .P
 .B targetctl restore [config-file]
 .P
@@ -50,7 +50,7 @@ Displays usage information.
 .BR targetd (8),
 .BR saveconfig.json (5)
 .SH FILES
-.B /etc/target/saveconfig.json
+.B /etc/rtslib-fb-target/saveconfig.json
 .P
 .B /sys/kernel/config/target
 .SH AUTHOR
